# python-falcon-api

./: README.md  docker-compose.yml  main.py  pyproject.toml
database-schema/: dabase.sql  init.dbs  init.dbs.bak  init.sql  schema.dbs  schema.dbs.bak
databse-schema/: dabase.sql  schema.dbs
src/: routes.py  server.py
src/common/decorators/: roles.py  unprotected.py
src/common/middlewares/: authentication.py
src/security/: jwt_service.py
